--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@awesome-cordova-plugins/diagnostic": "^5.46.0",
     "@capacitor/android": "4.6.2",
     "@capacitor/app": "4.1.1",
     "@capacitor/camera": "^4.1.4",
@@ -24,6 +25,8 @@
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
     "axios": "^1.2.2",
+    "capacitor-native-settings": "^4.0.3",
+    "cordova.plugins.diagnostic": "^7.1.1",
     "core-js": "^3.6.5",
     "ionicons": "^6.0.3",
     "swiper": "^8.4.6",
